--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+samba4 (4.0.0~rc5+dfsg1-1+zentyal3) precise; urgency=low
+
+  * Fix segfault in DLZ patch loading empty keys file
+
+ -- Samuel Cabrero <scabrero@zentyal.com>  Mon, 19 Nov 2012 12:32:57 +0100
+
 samba4 (4.0.0~rc5+dfsg1-1+zentyal2) precise; urgency=low
 
   * Patch for heimdal API changes.
